2012-04-21  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.0-incubating-4, added support for cobertura reports and Sonar integration.

2012-06-08  Harry Metske <metskem@apache.org>

       * 2.9.0-incubating-3, fixed JSPWIKI-729 Update Lucene to current version  3.6.0

2012-06-06  Harry Metske <metskem@apache.org>

       * 2.9.0-incubating-2, fixed jsp compile error in rss.jsp ( we forgot one occurrence of com.ecyrd.jspwiki)

2012-05-02  Dirk Frederickx (brushed AT apache DOT org)

       * 2.9.0-incubating-1, fixing JSPWIKI-683 Sortable Tables.
       
       * second ASF release candidate build.

2012-04-21  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.0-incubating-0, first ASF release candidate build.

2012-04-18  Harry Metske <metskem@apache.org>

       * 2.9.0-svn-9
        
        * fixed JSPWIKI-726 drop the 2 case-sensitive tests in WikiEngineTest.testSpacedNames1
        
2012-04-14  Harry Metske <metskem@apache.org>

       * 2.9.0-svn-8
        
        * fixed JSPWIKI-725 Return to original page attachments list after deleting one attachment
        
2012-03-25  Juan Pablo Santos (juanpablo AT apache DOT org)
        
        * 2.9.0-svn-7
        
        * fixed JSPWIKI-722 Build broken under jdk 1.7

2012-02-22  Harry Metske <metskem@apache.org>

        * 2.9.0-svn-6
        
        * fixed JSPWIKI-721 Log FileNotFoundException on missing attachment

2012-02-12  Juan Pablo Santos (juanpablo AT apache DOT org)
        
        * 2.9.0-svn-5
        
        * small refactor on ClassUtil.getMappedObject: it uses varargs so we can take away 
          a couple of methods. Also /etc/ini/classmappings.xml file is fully populated with  
          all ClassUtil.getMappedObject calls 
        
2012-02-07  Juan Pablo Santos (juanpablo AT apache DOT org)
        
        * tests are now part of the main build. Also, they can be desactivated through 